* Fix - Cannot reset "Calendar" field data * Fix - Translate product variation title in product selectbox * Remove undesired white space below events lists

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -1,8 +1,7 @@
 /***** FRONT END *****/
 .bookacti-booking-system > div,
 .bookacti-notices,
-.bookacti-picked-events		{ margin-bottom: 20px; }
-.bookacti-booking-system	{ margin-bottom: 30px; }
+.bookacti-booking-system	{ margin-bottom: 20px; }
 
 .bookacti-frontend-dialog { display: none; }
 .bookacti-picked-events { display: none; }
